syntax = "proto3";

package proto.aws.v1;

option go_package = "github.com/codeclout/AccountEd/pkg/session";

import "aws/v1/messages.proto";

service AWSResourceClientService {
  rpc GetAWSSessionCredentials(AWSConfigRequest) returns (AWSConfigResponse);
}